--- a/talkrating.html
+++ b/talkrating.html
@@ -31,6 +31,27 @@
 
 <template name="talkForm">
     <div class="container">
+        <div class="row">&nbsp;</div>
+        <form name="addEntryForm" class="form-horizontal" role="form">
+            <div class="form-group">
+                <label for="title" class="col-sm-2 control-label">Title</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="title" placeholder="Title">
+                </div>
+            </div>
 
+            <div class="form-group">
+                <label for="description" class="col-sm-2 control-label">Description</label>
+                <div class="col-sm-10">
+                    <textarea class="form-control" id="description" placeholder="Description"></textarea>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                    <button type="button" class="btn btn-default">Save</button>
+                </div>
+            </div>
+        </form>
     </div>
 </template>
