--- a/talkrating.html
+++ b/talkrating.html
@@ -22,7 +22,7 @@
             {{#each talks}}
             <dt><h3>{{title}}</h3></dt>
             <dd>
-                <h3><small>{{description}}</small></h3>
+                <h3><small>{{description}}</small> <button type="button" class="btn btn-default btn-xs"><span class="glyphicon glyphicon-heart-empty"></span> +{{votes}}</button></h3>
             </dd>
             {{/each}}
         </dl>
